syntax = "proto3";
package admin;

option go_package = "admin/v1;admin";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

service Menu{
  // 创建菜单接口
  rpc Create(MenuCreateRequest) returns (MenuCreateResponse) {
    option (google.api.http) = {
      post: "/backend/menu/create"
      body: "*"
    };
  }

  // 更新菜单接口
  rpc Update(MenuUpdateRequest) returns (MenuUpdateResponse) {
    option (google.api.http) = {
      post: "/backend/menu/update"
      body: "*"
    };
  }

  // 删除菜单接口
  rpc Delete(MenuDeleteRequest) returns (MenuDeleteResponse) {
    option (google.api.http) = {
      post: "/backend/menu/delete"
      body: "*"
    };
  }

  rpc List(MenuListRequest) returns (MenuListResponse) {
    option (google.api.http) = {
      post: "/backend/menu/list"
      body: "*"
    };
  }
}

message MenuCreateRequest{
  // 父级菜单ID
  int32 parent_id = 1;
  // 菜单名称
  string name = 2 [(validate.rules).string = {min_len: 1}];
  // 菜单类型
  int32 menu_type = 3;
  // 菜单图标
  string icon = 4;
  // 菜单路径
  string path = 5;
  // 排序
  int32 sort = 6;
  // 是否隐藏
  string hidden = 7 [(validate.rules).string = {in: ["", "Y", "N"]}];
  // 是否使用布局
  string use_layout = 8 [(validate.rules).string = {in: ["", "Y", "N"]}];
  // 权限代码
  string auth_code = 9;
}

message MenuCreateResponse{
  int32 id = 1;
}

message MenuUpdateRequest{
  // 菜单ID
  int32 id = 1;
  // 菜单名称
  string name = 2 [(validate.rules).string = {min_len: 1}];
  // 菜单图标
  string icon = 4;
  // 菜单路径
  string path = 5;
  // 排序
  int32 sort = 6;
  // 是否隐藏
  string hidden = 7 [(validate.rules).string = {in: ["", "Y", "N"]}];
  // 状态
  int32 status = 8 [(validate.rules).int32 = {in: [1, 2]}];
  // 父级菜单ID
  int32 parent_id = 9;
  // 是否使用布局
  string use_layout = 10 [(validate.rules).string = {in: ["", "Y", "N"]}];
  // 权限代码
  string auth_code = 11;
}

message MenuUpdateResponse{
  int32 id = 1;
}

message MenuDeleteRequest{
  // 菜单ID
  int32 id = 1;
}

message MenuDeleteResponse{
  int32 id = 1;
}

message MenuListRequest{}


message MenuListResponse{
  repeated MenuItem items = 1;
}


message MenuItem {
  // 菜单ID
  int32 id = 1;
  // 父级菜单ID
  int32 parent_id = 2;
  // 菜单名称
  string name = 3;
  // 菜单类型
  int32 menu_type = 4;
  // 菜单图标
  string icon = 5;
  // 菜单路径
  string path = 6;
  // 排序
  int32 sort = 7;
  // 状态
  int32 status = 8;
  // 是否隐藏
  string hidden = 9;
  // 是否使用布局
  string use_layout = 10;
  // 权限代码
  string auth_code = 11;
  // 创建时间
  string created_at = 12;
  // 更新时间
  string updated_at = 13;
  // 子菜单
  repeated MenuItem children = 14;
}